<resources>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password_required">Current Password is required</string>
    <string name="new_password_required">New Password is required</string>
    <string name="app_name">Weather App</string>
    <string name="title">Weather App</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="email_required">Email is required</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="name_required">Name is required</string>
    <string name="phone_required">Phone number is required</string>
    <string name="confirm_password_required">Passwords do not match</string>
    <string name="password_required">Password is required</string>
    <string name="invalid_name_format">Invalid name format</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="small_password">Password is too short</string>
    <string name="weak_password">Password is weak</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="select_country">Select Country</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="weather_app">Weather App</string>
    <string name="back_button">back_button</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="save">save</string>
    <string name="fahrenheit">fahrenheit</string>
    <string name="celsius">celsius</string>
    <string name="select_temperature_unit">Select Temperature Unit</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="_5_day_forecast">5-Day Forecast</string>
</resources>