<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar (Navigation Bar) -->

    <!-- Search Bar below the Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#0099CC"
        android:title="@string/search"
        android:titleTextColor="#fff">

        <!-- Back Button in Toolbar -->
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="-10dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:onClick="onBackPressed"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/search_bar_background"
        android:hint="@string/enter_city_name"
        android:importantForAccessibility="yes"
        android:inputType=""
        android:padding="12dp"
        android:textColor="#333"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Search Button below the Search Bar -->
    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_edit_text"
        android:layout_marginTop="16dp"
        android:onClick="onSearchClicked"
        android:text="@string/search"
        android:backgroundTint="#0099CC"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
